deploy/kubernetes/testbed/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toron-test
  labels:
    app.kubernetes.io/part-of: toron
